syntax = "proto3";
package bar;
option go_package = "github.com/ta4g/ta4g/gen/proto/interval/bar";
import "google/protobuf/timestamp.proto";

// StandardBar is a single bar with basic OHLC+OpenInterest
message StandardBar {
  // Time interval of this bar
  google.protobuf.Timestamp time = 1;

  // Open price for the current bar
  double open = 2;

  // High price for the current bar
  double high = 3;

  // Low price for the current bar
  double low = 4;

  // Close price for the current bar
  double close = 5;

  // Volume of shares, options, coins, etc traded during this bar
  double volume = 6;

  // OpenInterest (Optional) amount of derivatives currently outstanding for this bar
  // If there is no open interest then this will be -1, to indicate no data
  int64 open_interest = 7;
}

// StandardBars is a collection of bars
message StandardBars {
  repeated StandardBar bars = 1;
}
